# tryinvoke

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: tryinvoke.h
test/: CMakeLists.txt  main.cpp
